--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,7 +15,7 @@ spring:
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 
   mail:
-    host: ${MAIL_HOST}
+    host: smtp.googlemail.com
     username: ${MAIL_USERNAME}
     password: ${MAIL_PASSWORD}
     port: 587
@@ -35,4 +35,4 @@ logging:
 app:
   jwtSecret: ${JWT_SECRET_KEY}
   jwtExpirationMs: ${JWT_EXPIRATION}
-  createPasswordURL: "http://localhost:8080/sign/createPassword?code="
+  confirmUser: "http://localhost:8080/api/v1/auth/confirm?token="
